# events-architecture

./: README.md  docker-compose.yml
api_gateway/: Dockerfile  graphql_types.py  main.py  pyproject.toml  resolvers.py  schemas.py
auth_service/: Dockerfile  alembic.ini  auth.py  config.py  crud.py  main.py  model.py  pyproject.toml  routers.py  schema.py
docs/: Authorization Service.postman_collection.json  Event Management Service.postman_collection.json  Message Notification Service.postman_collection.json  auth.md  crud.md  generate_events.py  messages.md  sync_data.py
events_service/: Dockerfile  alembic.ini  config.py  elasticsearch_client.py  main.py  model.py  pyproject.toml  routers.py  schema.py  session.py
events_service/migrations/: env.py
events_service/migrations/versions/: 8320a6b8259c_create_events_table.py
notification_service/: Dockerfile  main.py  message.py  model.py  pyproject.toml  router.py
