[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = ""
authors = ["Juanpfrancos <juanpanime@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
strawberry-graphql = "^0.253.1"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
