[tool.poetry]
name = "events-service"
version = "0.1.0"
description = ""
authors = ["Juanpfrancos <juanpanime@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
alembic = "^1.14.0"
pydantic-settings = "^2.6.1"
logging = "^0.4.9.6"
elasticsearch = "^8.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
